Render Region not refreshing Output Properties #69522

Closed
opened 2019-09-05 09:11:41 +02:00 by Marcin Twarowski · 5 comments

System Information
Operating system: Windows-10-10.0.16299 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.15

Blender Version
Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-05 02:56, hash: 6fc6f2504d

Short description of error

  • Switch to Cycles engine
  • Select some Render Region (ctrl+b)
    obraz.png
  • "Output Properties" > "Dimensions" > "Render Region" - checkbox doesn't update
    obraz.png

You have to perform an action to refresh it, like hover mouse over it, or minimize window, or open new window etc. Similarly, when you reset Render Region (ctrl+alt+b), checkbox will also not update immediately.

**System Information** Operating system: Windows-10-10.0.16299 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.15 **Blender Version** Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-05 02:56, hash: `6fc6f2504d` **Short description of error** - Switch to Cycles engine - Select some Render Region (ctrl+b) ![obraz.png](https://archive.blender.org/developer/F7717895/obraz.png) - "Output Properties" > "Dimensions" > "Render Region" - checkbox doesn't update ![obraz.png](https://archive.blender.org/developer/F7717898/obraz.png) You have to perform an action to refresh it, like hover mouse over it, or minimize window, or open new window etc. Similarly, when you reset Render Region (ctrl+alt+b), checkbox will also not update immediately.

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, checking...

Can confirm, checking...
Philipp Oeser self-assigned this 2019-09-05 09:53:39 +02:00

This issue was referenced by ab158cd00a

This issue was referenced by ab158cd00aa62979acddf257ebd63a8be83e3b4f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69522
No description provided.